--- a/configs/config_image_pair_dataset_prediction.yaml
+++ b/configs/config_image_pair_dataset_prediction.yaml
@@ -1,7 +1,7 @@
 dataset:
     type: 'ImagePairDataset'
-    filename: data/training.hdf5
-    keypoints_filename: data/labels_training.hdf5
+    filename: /Users/antonia/dev/UNITN/remote_sensing_systems/arss_aerial_feature_matching/groundtruth_gui/data/training_del.hdf5
+    keypoints_filename: 
     single_image: false
     height: -1
     width: -1
@@ -21,7 +21,7 @@ dataset:
                     kernel_size_range: [50, 100]
                 motion_blur: {max_kernel_size: 3}
         homographic:
-            enable: true
+            enable: false
             params:
                 translation: true
                 rotation: true
@@ -32,7 +32,7 @@ dataset:
                 perspective_amplitude_y: 0.2
                 patch_ratio: 0.85
                 max_angle: 1.57  # 3.14
-                allow_artifacts: true
+                allow_artifacts: false
                 translation_overflow: 0.05
             valid_border_margin: 0
             border_reflect: true
