--- a/configs/config_multipoint_training.yaml
+++ b/configs/config_multipoint_training.yaml
@@ -1,7 +1,7 @@
 dataset:
     type: 'ImagePairDataset'
-    filename: /Users/antonia/dev/UNITN/remote_sensing_systems/multipoint/data/data_arss/training.hdf5
-    keypoints_filename: /Users/antonia/dev/UNITN/remote_sensing_systems/multipoint/data/data_arss/labels.hdf5
+    filename: /Users/antonia/dev/UNITN/remote_sensing_systems/arss_aerial_feature_matching/groundtruth_gui/data/training_del.hdf5
+    keypoints_filename: tmp/labels.hdf5
     single_image: false
     random_pairs: true
     #height: 240
@@ -34,7 +34,7 @@ dataset:
                 perspective_amplitude_x: 0.2
                 perspective_amplitude_y: 0.2
                 patch_ratio: 0.85
-                max_angle: 1.57  # 3.14
+                max_angle: 1.57
                 allow_artifacts: true
                 translation_overflow: 0.05
             valid_border_margin: 0
@@ -67,14 +67,14 @@ loss:
 
 training:
     #n_epochs: 3000
-    n_epochs: 3
+    n_epochs: 1000
     learningrate: 1e-4
     #batchsize: 32
-    batchsize: 1
+    batchsize: 16
     num_worker: 4
     allow_gpu: true
     use_writer: true
-    output_directory: 'model_weights/multipoint-retrained'
+    output_directory: 'model_weights/multipoint-multispectral'
     save_every_n_epoch: 5
     validation:
         compute_validation_loss: false
