--- a/arss_scripts/image_alignment/configs/config_align_images.yaml
+++ b/arss_scripts/image_alignment/configs/config_align_images.yaml
@@ -3,11 +3,13 @@
 # ------------------------------------------------------------------
 alignment_method : mi
 verbose : false
-show_results : true
+show_results : false
 save_aligned_images : true
 use_image_pyramid : false
 use_smoothing_stage : false
 perspective : true # affine transform not really tested anymore
+LaPlacian: true
+CannyEdge: false
 
 # ------------------------------------------------------------------
 # ALIGNMENT SETTINGS
