--- a/arss_scripts/image_alignment/configs/config_align_images.yaml
+++ b/arss_scripts/image_alignment/configs/config_align_images.yaml
@@ -8,8 +8,8 @@ save_aligned_images : true
 use_image_pyramid : false
 use_smoothing_stage : false
 perspective : true # affine transform not really tested anymore
-LaPlacian: true
-CannyEdge: false
+LaPlacian: false
+CannyEdge: true #choose either LaPlacian or CannyEdge
 
 # ------------------------------------------------------------------
 # ALIGNMENT SETTINGS
